<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.crawler-commons</groupId>
  <artifactId>sitemap-parser-test</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>sitemap-parser-test</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <javac.src.version>${java.version}</javac.src.version>
    <javac.target.version>${java.version}</javac.target.version>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <slf4j-api.version>1.7.7</slf4j-api.version>
    <slf4j-log4j12.version>1.7.7</slf4j-log4j12.version>
    <jwarc.version>0.11.0</jwarc.version>
    <junit.version>5.5.0</junit.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.crawler-commons</groupId>
      <artifactId>crawler-commons</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>org.netpreserve</groupId>
      <artifactId>jwarc</artifactId>
      <version>${jwarc.version}</version>
    </dependency>

    <dependency>
      <groupId>com.rometools</groupId>
      <artifactId>rome</artifactId>
      <version>1.12.2</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>${slf4j-log4j12.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>${javac.src.version}</source>
          <target>${javac.target.version}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <!--repositories>
    <repository>
      <id>crawler-commons-release-test</id>
      <name>Testing crawler-commons release candidates</name>
      <url>https://oss.sonatype.org/content/repositories/comgithubcrawler-commons-1008/</url>
    </repository>
  </repositories-->
</project>
